
	  This allows monotone's developers to concentrate on monotone
	  itself, rather than tracking external library updates, which in
	  practice did not happen.  By way of illustration, we were still
	  shipping sqlite 3.4.1, which is years out of date.  This has also
	  been a long-standing request of various redistributors of binary
	  packages, who prefer the use of globally shared libraries.

        Bugs fixed

        - In 0.42, a netsync writer would attemts to queue up all outgoing
          data as soon as it knew what data to send, in a single operation,
          without servicing the event loop. If there was a large amount of
          data to send, this would cause very long pauses and sometimes
          timeouts and dropped connections (for pauses over 10 minutes).
          The bug that caused this is fixed, and that operation now has a
          safety timer that should prevent it from coming back.

        - When the netsync server receives garbage over the network, it
          should be much better about only terminating the offending connection
          instead of the entire server.

        - Several bugfixes to `mtn automate stdio':
          * it now correctly distinguishs between syntax and command errors by
            returning error code 1 for the former and error code 2 for the
            latter - just as advertised in the documentation.
          * the stdio event loop no longer quits if a syntax error occurs, but
            rather discards the wrong state and accepts new (valid) commands.
          * option errors haven't been catched properly and thus weren't encoded
            in stdio either; this has been fixed as well.

        - In certain cases, especially also on FreeBSD and Mac OS X, netsync
          called select() even after read() returned 0 bytes to indicate the
          end of the file, resulting in a confusing error message. This
          is fixed by treating EOF specially and prevent further calls